# Marine-Energy

./: .gitignore  4.3-4.7整合.md  AGENTS.md  Day1-Day7任务说明.md  TODO.md  question.md  工程使用说明.md  当前方案优化版.md  我负责的内容.txt  框架与分工..xlsx  蓝海枢纽项目执行_v2.md  进度安排..xlsx  项目计划.docx
往年参考/blue-hub-s8-v0.10.0/: CHANGELOG.md  PROJECT_SPEC.md  README.md  pyproject.toml
往年参考/blue-hub-s8-v0.10.0/configs/: base_case.yaml  configuration_grid.csv  s1_battery_100mw_400mwh.yaml  s1_battery_100mw_400mwh_reserve.yaml  s2_battery_hydrogen_100mw_400mwh_100mw_72000kg.yaml  s2_hydrogen_100mw_72000kg.yaml  s3_compute_100mw_fiber_100mw_it.yaml  s4_integrated_b100_e400_h100_s72000_c100_f100.yaml  s5_flexible_hub_b100_e400_h200_s500000_c200_f200_fc50.yaml  s6_investment_cost_cases.csv  s6_planning_limits.yaml  s7_china_evidence_register.csv  s7_china_flexible_cost_cases.csv  s7_china_infrastructure_cost_cases.csv  s7_china_planning_limits.yaml  s8_analysis_settings.yaml  s8_candidate_definitions.csv  s8_risk_cases.csv  scenario_matrix.csv  technology_parameters.csv
往年参考/blue-hub-s8-v0.10.0/docs/: assumptions.md  model_equations.md  parameter_sources.md  phase0_research_review.md  phase1_s0_report.md  phase2_s1_report.md  phase3_s2_report.md  phase4_s3_report.md  phase5_s4_report.md  phase6_s5_flexibility_value_report.md  phase7_s6_investment_planning_report.md  phase9_s8_robust_value_report.md  s7_china_value_report.md  validation_report.md
往年参考/blue-hub-s8-v0.10.0/scripts/: audit_s7_results.py  audit_s8_results.py  prepare_data.py  run_baseline.py  run_battery_baseline.py  run_battery_scenarios.py  (+13 more)
(+81 files in other folders)
